--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FF8753" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="특별한 날을 D-day로 정하고 사람들과 함께 비밀 메시지를 남기세요. D-day에 공개되는 메시지들이 추억을 더 특별하게 만들어줍니다. 보낸 메시지는 D-day 단 하루만 볼 수 있어요! D-day가 지나면 룸이 닫히니까 서두르세요."
     />
+    <meta
+      property="og:title"
+      content="Roobits | 당신의 추억을 기록해보세요"
+    />
+    <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/89282099/204121628-2519d35a-70af-470e-9ad7-21756bcfb4f4.png" 
+    />
+    <meta
+    property="og:description"
+    content="특별한 날을 D-day로 정하고 사람들과 함께 비밀 메시지를 남기세요. D-day에 공개되는 메시지들이 추억을 더 특별하게 만들어줍니다. 보낸 메시지는 D-day 단 하루만 볼 수 있어요! D-day가 지나면 룸이 닫히니까 서두르세요."
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Roobits | 당신의 추억을 기록해보세요</title>
