--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,44 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FF8753" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="특별한 날을 D-day로 정하고 사람들과 함께 비밀 메시지를 남기세요. D-day에 공개되는 메시지들이 추억을 더 특별하게 만들어줍니다. 보낸 메시지는 D-day 단 하루만 볼 수 있어요! D-day가 지나면 룸이 닫히니까 서두르세요."
     />
+    <meta
+      property="og:title"
+      content="Roobits | 당신의 추억을 기록해보세요"
+    />
+    <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/89282099/204121628-2519d35a-70af-470e-9ad7-21756bcfb4f4.png" 
+    />
+    <meta
+    property="og:description"
+    content="특별한 날을 D-day로 정하고 사람들과 함께 비밀 메시지를 남기세요. D-day에 공개되는 메시지들이 추억을 더 특별하게 만들어줍니다. 보낸 메시지는 D-day 단 하루만 볼 수 있어요! D-day가 지나면 룸이 닫히니까 서두르세요."
+  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Roobits | 당신의 추억을 기록해보세요</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <script
       src="https://t1.kakaocdn.net/kakao_js_sdk/2.0.0/kakao.min.js"
       integrity="sha384-PFHeU/4gvSH8kpvhrigAPfZGBDPs372JceJq3jAXce11bVA6rMvGWzvP4fMQuBGL"
